release/1.8.4/VERSION.md
# 1.8.4

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.4```   |
| Release Time   | ```2015-04-17T11:37:50+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```459204fabee3fd9976a6c942b24cbd8382d02d6e```   |
| size   | ```8461965```   |
| url       | ```https://launcher.mojang.com/v1/objects/459204fabee3fd9976a6c942b24cbd8382d02d6e/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```dd4b5eba1c79500390e0b0f45162fa70d38f8a3d```   |
| size   | ```9779346```   |
| url       | ```https://launcher.mojang.com/v1/objects/dd4b5eba1c79500390e0b0f45162fa70d38f8a3d/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |